# Knilb

./: Readme.md  run.sh
bot/: .clang-format  .gitignore  CMakeLists.txt  build.sh
bot/include/: Bitboard.hpp  Board.hpp  Bot.hpp  Coordinate.hpp  Evaluation.hpp  Move.hpp  MoveGeneration.hpp  Piece.hpp  PieceSquareTable.hpp  Precomputed.hpp  Search.hpp  ThinkStopwatch.hpp  TimeController.hpp  TranspositionTable.hpp  UCI.hpp  Zobrist.hpp
bot/src/: Board.cpp  Bot.cpp  Evaluation.cpp  MoveGeneration.cpp  UCI.cpp  main.cpp
server/: package.json
server/src/: Knilb  index.ts
server/src/api/: LichessClient.ts  types.ts
server/src/engine/: EngineInstance.ts  UCICommunicator.ts
server/src/utils/: config.ts
